--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.13.0",
+    "@react-native-community/datetimepicker": "^6.1.2",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@react-navigation/tabs": "0.0.0-alpha.12",
+    "date-fns": "^2.28.0",
     "expo": "~44.0.0",
+    "expo-splash-screen": "^0.14.2",
+    "expo-sqlite": "^10.1.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
