--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "CountDownRN",
-    "slug": "CountDownRN",
+    "name": "CountdownRN",
+    "slug": "CountdownRN",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
